# lyplayer_server

./: .gitignore  Cargo.toml  build.sh
crates/lyserver/: Cargo.toml
crates/lyserver/src/: main.rs  plugins.rs  server.rs
crates/lyserver_database/: Cargo.toml
crates/lyserver_database/src/: database.rs  lib.rs
crates/lyserver_database/src/databases/: preferences.rs
crates/lyserver_hello_plugin/: Cargo.toml
crates/lyserver_hello_plugin/src/: lib.rs
crates/lyserver_hello_plugin/static/: manifest.toml
crates/lyserver_http/: Cargo.toml
crates/lyserver_http/src/: lib.rs
crates/lyserver_http/src/api/: mod.rs  plugin.rs
crates/lyserver_http_shared/: Cargo.toml
crates/lyserver_http_shared/src/: lib.rs  router.rs
crates/lyserver_media_plugin/: Cargo.toml
crates/lyserver_media_plugin/src/: lib.rs
crates/lyserver_media_plugin/static/: manifest.toml
crates/lyserver_messaging_shared/: Cargo.toml
crates/lyserver_messaging_shared/src/: lib.rs
crates/lyserver_player/: Cargo.toml
crates/lyserver_player/src/: lib.rs
crates/lyserver_plugin_common/: Cargo.toml
crates/lyserver_plugin_common/src/: lib.rs
crates/lyserver_plugin_shared_data/: Cargo.toml
crates/lyserver_plugin_shared_data/src/: lib.rs
crates/lyserver_plugin_wasm_loader/: Cargo.toml
crates/lyserver_plugin_wasm_loader/src/: lib.rs  plugin_impl.rs
crates/lyserver_plugin_wasm_runtime/: Cargo.toml
crates/lyserver_plugin_wasm_runtime/src/: alloc.rs  externs.rs  ipc.rs  lib.rs  log.rs
crates/lyserver_preferences/: Cargo.toml
crates/lyserver_preferences/src/: api.rs  lib.rs
crates/lyserver_random_id/: Cargo.toml
crates/lyserver_random_id/src/: lib.rs
crates/lyserver_shared_data/: Cargo.toml
crates/lyserver_shared_data/src/: database.rs  directories.rs  lib.rs  messaging.rs  plugins.rs  status.rs
