[package]
name = "lyserver"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_millis = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
toml = { workspace = true }
ctrlc = "3"
tokio-util = { workspace = true }

lyserver_http = { path = "../lyserver_http" }
lyserver_database = { path = "../lyserver_database" }
lyserver_preferences = { path = "../lyserver_preferences" }
lyserver_shared_data = { path = "../lyserver_shared_data" }
lyserver_plugin_common = { path = "../lyserver_plugin_common" }
lyserver_plugin_wasm_loader = { path = "../lyserver_plugin_wasm_loader" }
lyserver_plugin_shared_data = { path = "../lyserver_plugin_shared_data" }