[package]
name = "lyserver_database"
version = "0.1.0"
edition = "2024"

[dependencies]
lyserver_plugin_common = { path = "../lyserver_plugin_common" }
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls"] }
futures = { workspace = true }
lyserver_shared_data = { path = "../lyserver_shared_data" }
serde = { workspace = true }
serde_json = { workspace = true }
lyserver_plugin_shared_data = { path = "../lyserver_plugin_shared_data" }