[package]
name = "lyserver_http"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = { workspace = true }
actix-rt = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures-util = { workspace = true }

lyserver_plugin_common = { path = "../lyserver_plugin_common" }
lyserver_player = { path = "../lyserver_player" }
lyserver_shared_data = { path = "../lyserver_shared_data" }
lyserver_plugin_shared_data = { path = "../lyserver_plugin_shared_data" }
lyserver_http_shared = { path = "../lyserver_http_shared" }
lyserver_messaging_shared = { path = "../lyserver_messaging_shared" }