[package]
name = "lyserver_plugin_shared_data"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
serde_cbor = { workspace = true }

lyserver_shared_data = { path = "../lyserver_shared_data" }
lyserver_messaging_shared = { path = "../lyserver_messaging_shared" }