[package]
name = "lyserver_plugin_wasm_loader"
version = "0.1.0"
edition = "2024"

[dependencies]
toml = "0.8.23"
lyserver_plugin_common = { path = "../lyserver_plugin_common" }
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true}
lyserver_shared_data = { path = "../lyserver_shared_data" }
serde = { workspace = true }
serde_json = { workspace = true }
wasmtime = { version = "33.0.0" }
wasmtime-wasi = { version = "33.0.0", features = ["preview1"] }
lyserver_plugin_shared_data = { path = "../lyserver_plugin_shared_data" }
serde_cbor = { workspace = true }