[package]
name = "lyserver_preferences"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }

lyserver_shared_data = { path = "../lyserver_shared_data" }
lyserver_plugin_common = { path = "../lyserver_plugin_common" }
lyserver_plugin_shared_data = { path = "../lyserver_plugin_shared_data" }
lyserver_http_shared = { path = "../lyserver_http_shared" }
